--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/Home">
-                    <img src="~/images/gamer-logo-small.png" width="50" height="50" class="d-inline-block align-top" alt="">
+                    <img src="~/local/gamer-logo-small.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
