--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/PictureDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/PictureDetails.cshtml
@@ -1,89 +1,218 @@
 ﻿@model ArtfulAdventures.Web.ViewModels.Picture.PictureDetailsViewModel
 
-<h1>@Model.Description</h1>
-
-<img src="~/images/@Model.Url" alt="picture">
-
-<p>Likes: @Model.Likes</p>
-
-@if (Model.HashTags != null)
+@if (TempData["Success"] != null)
 {
-    <p>Hash tags:</p>
-    <ul>
-        @foreach (var hashTag in Model.HashTags)
-        {
-            <li>@hashTag.Name</li>
-        }
-    </ul>
+    <div class="alert alert-success text-black" role="alert">
+        @TempData["Success"]
+    </div>
 }
 
-@if (Model.Comments != null)
+@if (TempData["Message"] != null)
 {
-    <p>Comments:</p>
-    <ul>
-        @foreach (var comment in Model.Comments)
-        {
-            <div>
-                <p>@comment.Content</p>
-                <p>Author: @comment.Author</p>
-
-                <p>Created on: @comment.CreatedOn</p>
-            </div>
-        }
-    </ul>
+    <div class="alert alert-danger text-black" role="alert">
+        @TempData["Message"]
+    </div>
 }
 
-<section class="profile-view">
-    <div class="d-flex justify-content-center align-items-center">
-        <div class="col col-md-9 col-lg-7 col-xl-5">
-            <div class="card" style="border-radius: 15px;">
-                <div class="card-body p-2">
-                    <div class="d-flex text-black">
-                        <div class="flex-shrink-0">
-                            @if (Model.OwnerPictureUrl != null)
-                            {
-                                <img src="~/images/@Model.OwnerPictureUrl" alt="image"
-                                     class="img-fluid" style="width: 180px; border-radius: 10px;">
+<div class="container">
+    <div class="row">
+        <!-- Section 1: Picture -->
+        <style>
+            .frosted-glass {
+                /* Set the background color to a semi-transparent white */
+                background-color: rgba(74, 98, 110, 0.1);
+                /* Apply the backdrop-filter effect */
+                backdrop-filter: blur(100px);
+                border-radius: 15px;
+            }
+        </style>
 
-                            }
-                            else
-                            {
-                                <img src="~/images/default-user.png" alt="image"
-                                     class="img-fluid" style="width: 180px; border-radius: 10px;">
-                            }
+        <div class="col-md-9 d-flex justify-content-center align-items-center frosted-glass">
+            <section class="picture-view">
+                <div style="width: 100%; height: auto; overflow: hidden;">
+                    <img src="~/images/@Model.Url" alt="Picture" class="img-fluid">
+
+                </div>
+            </section>
+        </div>
+        <!-- Section 2: Profile Information -->
+        <div class="col-md-3">
+            <!-- Your code for section two goes here -->
+            <section>
+                <div class="row ">
+                    <div class="col-md-12">
+
+                        <div class="card" style="border-radius: 15px; background: radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%);">
+                            <div class="card-body text-center ">
+                                <div class="mt-2 mb-3">
+                                    @if (Model.OwnerPictureUrl != null)
+                                    {
+                                        <img src="~/images/@Model.OwnerPictureUrl" alt="image"
+                                             class="rounded-circle img-fluid" style="width: 100px;">
+
+                                    }
+                                    else
+                                    {
+                                        <img src="~/images/default-user.png" alt="image"
+                                             class="rounded-circle img-fluid" style="width: 100px;">
+                                    }
+                                </div>
+                                <h4 class="mb-2">@Model.Owner</h4>
+                                <p class="text-muted mb-2">
+                                    @Model.OwnerLevel <span class="mx-2">|</span> @Model.OwnerLevel
+                                </p>
+                                <div class="d-flex pt-2">
+                                    <form method="get" asp-area="" asp-controller="UserProfile" asp-action="Profile" asp-route-username="@Model.Owner">
+                                        <input type="hidden" name="username" value="@Model.Owner" />
+                                        <button type="submit" class="btn btn-outline-primary me-1 flex-grow-1">
+                                            Profile
+                                        </button>
+                                    </form>
+                                    <button type="button" class="btn btn-outline-primary me-1 flex-grow-1">Chat</button>
+
+
+                                </div>
+                                <div class="d-flex justify-content-center text-center mt-3 mb-2">
+                                    <div class="d-flex justify-content-center rounded-3 p-2 mb-2"
+                                         style="background:radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%); border: 1px solid white; color:white;">
+                                        <div>
+                                            <p class="small text-muted mb-1">Followers</p>
+                                            <p class="mb-0">@Model.OwnerFollowersCount</p>
+                                        </div>
+                                        <div class="px-3">
+                                            <p class="small text-muted mb-1">Following</p>
+                                            <p class="mb-0">@Model.OwnerFollowingCount</p>
+                                        </div>
+                                        <div>
+                                            <p class="small text-muted mb-1">Uploads</p>
+                                            <p class="mb-0">@Model.OwnerPicturesCount</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="flex-grow-1 ms-3">
-                            <h5 class="mb-1">@Model.Owner</h5>
-                            <p class="mb-2 pb-1" style="color: #2b2a2a;">@Model.OwnerLevel</p>
-                            <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
-                                 style="background-color: #efefef;">
-                                <div>
-                                    <p class="small text-muted mb-1">Followers</p>
-                                    <p class="mb-0">@Model.OwnerFollowersCount</p>
+
+                    </div>
+                </div>
+            </section>
+
+            <section class="py-3">
+                <div class="justify-content-center rounded-3 p-2 mb-2"
+                     style="background:radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%); border: 1px solid white; color:white;">
+                    <div class="justify-content-center rounded-3 p-3 mb-1"
+                         style="background:radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%); ">
+                        <div class="d-flex justify-content-center">
+                            <form method="post" asp-area="" asp-controller="Picture" asp-action="LikePicture" asp-route-pictureId="@Model.Id">
+                                <button type="submit" class="btn btn-outline-primary me-1 flex-grow-1">
+                                    Like
+                                </button>
+                            </form>
+                            <form method="post" asp-area="" asp-controller="Picture" asp-action="AddToCollection" asp-route-pictureId="@Model.Id">
+                                <button type="submit" class="btn btn-outline-primary me-1 flex-grow-1">Add To Favorites</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-muted mb-1">Likes:</p>
+                        <p class="mb-0" style="margin-left:3px;">@Model.Likes</p>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-muted mb-1">Submitted:</p>
+                        <p class="mb-0" style="margin-left:3px;">@Model.CreatedOn</p>
+                    </div>
+                    <div>
+                        <p class="text-muted mb-1">Description: </p>
+                        <p class="mb-0">@Model.Description</p>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <!-- Section 4: Comments -->
+    <section class="col-md-11">
+        <div class="container my-5">
+            <div class="row d-flex justify-content-left">
+                <div class="col-md-12 col-lg-10">
+                    <div class="card text-dark">
+                        <div class="card-body p-4">
+                            <h4 class="mb-0">Recent comments</h4>
+                            <p class="fw-light mb-4 pb-2">Latest Comments section by users</p>
+
+                            <div class="card-footer py-3 border-0" style="background-color: transparent;">
+                                <div class="d-flex flex-start w-100">
+                                    <img class="rounded-circle shadow-1-strong me-3"
+                                         src="" alt="avatar" width="40"
+                                         height="40" />
+                                    <div class="form-outline w-100">
+                                        <textarea class="form-control" id="textArea" rows="4"
+                                                  style="background-color: transparent;"></textarea>
+                                    </div>
                                 </div>
-                                <div class="px-3">
-                                    <p class="small text-muted mb-1">Following</p>
-                                    <p class="mb-0">@Model.OwnerFollowingCount</p>
-                                </div>
-                                <div>
-                                    <p class="small text-muted mb-1">Uploads</p>
-                                    <p class="mb-0">@Model.OwnerPicturesCount</p>
+                                <div class="float-end mt-3 pt-1">
+                                    <form asp-area="" asp-controller="Comment" asp-action="AddComment" asp-route-pictureId="@Model.Id" method="post">
+                                        <input type="hidden" name="content" id="contentInput" />
+                                        <button type="submit" id="button" class="btn btn-primary btn-sm">Post comment</button>
+                                    </form>
+                                    <button type="button" class="btn btn-outline-primary btn-sm">Cancel</button>
                                 </div>
                             </div>
-                            <div class="d-flex pt-4">
-                                <form method="get" asp-area="" asp-controller="UserProfile" asp-action="Profile" asp-route-username="@Model.Owner">
-                                    <input type="hidden" name="username" value="@Model.Owner" />
-                                    <button type="submit" class="btn btn-outline-primary me-1 flex-grow-1">
-                                        Profile
-                                    </button>
-                                </form>
-                                <button type="button" class="btn btn-outline-primary me-1 flex-grow-1">Chat</button>
-                                <button type="button" class="btn btn-outline-primary me-1 flex-grow-1">Like</button>
-                            </div>
+
+                            @if (Model.Comments != null)
+                            {
+                                @foreach (var comment in Model.Comments.OrderByDescending(p => p.CreatedOn))
+                                {
+                                    <div class="card-body p-4">
+                                        <div class="d-flex flex-start">
+                                            <img class="rounded-circle shadow-1-strong me-3"
+                                                 src="~/images/@comment.AuthorPictureUrl" alt="avatar" width="60"
+                                                 height="60" />
+                                            <div>
+                                                <h6 class="fw-bold mb-1">@comment.Author</h6>
+                                                <div class="d-flex align-items-center mb-3">
+                                                    <p class="mb-0">
+                                                        @comment.CreatedOn
+                                                    </p>
+                                                </div>
+                                                <p class="mb-0">
+                                                    @comment.Content
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <hr class="my-0" style="height: 1px;" />
+
+                                    <hr class="my-0" />
+                                }
+                            }
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
+
+<style>
+    .card {
+        /* Set background color to white with 50% transparency */
+        background-color: rgba(74, 98, 110, 0.9);
+        /* Apply blur effect to area behind element */
+        backdrop-filter: blur(10px);
+    }</style>
+
+}
+<script>
+    let button = document.getElementById("button");
+    button.addEventListener("click", function () {
+        let textArea = document.getElementById("textArea");
+        let contentInput = document.getElementById("contentInput");
+        contentInput.value = textArea.value;
+    });
+</script>
+
