--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Followers.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Followers.cshtml
@@ -28,7 +28,7 @@
                             }
                             else
                             {
-                                <img src="~/images/no-profile-picture.jpg" alt=" "
+                                <img src="~/local/no-profile-picture.jpg" alt=" "
                                      class="block" style="width: 100%; height: 100%; object-fit: cover;">
                             }
                             @if (profile.Username != null)
@@ -62,6 +62,23 @@
                                     background-color: #6b8cce;
                                 }
                             </style>
+                            <div class="d-flex justify-content-center text-center mt-3 mb-2">
+                                <div class="d-flex justify-content-center rounded-3 p-2 mb-2"
+                                     style="background:radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%); border: 1px solid white; color:white;">
+                                    <div>
+                                        <p class="small text-muted mb-1">Followers</p>
+                                        <p class="mb-0">@profile.FollowersCount</p>
+                                    </div>
+                                    <div class="px-3">
+                                        <p class="small text-muted mb-1">Following</p>
+                                        <p class="mb-0">@profile.FollowingCount</p>
+                                    </div>
+                                    <div>
+                                        <p class="small text-muted mb-1">Uploads</p>
+                                        <p class="mb-0">@profile.PicturesCount</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
