--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Profile.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Profile.cshtml
@@ -9,6 +9,12 @@
         @TempData["Message"]
     </div>
 }
+else if (TempData["Success"] != null)
+{
+    <div class="alert alert-success bg-dark text-white" role="alert">
+        @TempData["Success"]
+    </div>
+}
 
 <section>
     <div class="container py-3">
@@ -19,7 +25,10 @@
                         <input type="hidden" name="username" value="@Model.Username" />
                         <button type="submit" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Portfolio</button>
                     </form>
-                    <button type="button" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Collections</button>
+                    <form asp-area="" asp-controller="UserProfile" asp-action="Favorites" method="get">
+                        <input type="hidden" name="username" value="@Model.Username" />
+                        <button type="submit" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Favorites</button>
+                    </form>
                     <form asp-area="" asp-controller="UserProfile" asp-action="Followers" method="get">
                         <input type="hidden" name="username" value="@Model.Username" />
                         <button type="submit" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Followers</button>
@@ -48,7 +57,7 @@
                         }
                         else
                         {
-                            <img src="~/images/no-profile-picture.jpg" alt=" "
+                            <img src="~/local/no-profile-picture.jpg" alt=" "
                                  class="block" style="width: 150px;">
                         }
                         @if (Model.Username != null)
@@ -92,6 +101,23 @@
                                 background-color: #6b8cce;
                             }
                         </style>
+                        <div class="d-flex justify-content-center text-center mt-3 mb-2">
+                            <div class="d-flex justify-content-center rounded-3 p-2 mb-2"
+                                 style="background:radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%); border: 1px solid white; color:white;">
+                                <div>
+                                    <p class="small text-muted mb-1">Followers</p>
+                                    <p class="mb-0">@Model.FollowersCount</p>
+                                </div>
+                                <div class="px-3">
+                                    <p class="small text-muted mb-1">Following</p>
+                                    <p class="mb-0">@Model.FollowingCount</p>
+                                </div>
+                                <div>
+                                    <p class="small text-muted mb-1">Uploads</p>
+                                    <p class="mb-0">@Model.PicturesCount</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 @if (Model.About != null)
