--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Following/All.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Following/All.cshtml
@@ -1,90 +1,128 @@
 ﻿@model ExploreViewModel
 @using Microsoft.AspNetCore.Http
 <link rel="stylesheet" href="https://cdn.rawgit.com/bantikyan/icheck-bootstrap/master/icheck-bootstrap.min.css">
-@{
-    int currentPage = ViewBag.CurrentPage ?? 1;
-    int previousPage = currentPage > 1 ? currentPage - 1 : 1;
-    int nextPage = currentPage + 1;
-}
-@if (currentPage > 1)
-{
-    <a asp-action="All" asp-route-page="@previousPage">Previous</a>
-}
-<a asp-action="All" asp-route-page="@nextPage">Next</a>
-
-@{
-    ViewBag.Title = "Artwork - Followed";
-
-    <h2 class="text-center">@ViewBag.Title</h2>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<div id="content">
+    @{
+        int currentPage = ViewBag.CurrentPage ?? 1;
+        int previousPage = currentPage > 1 ? currentPage - 1 : 1;
+        int nextPage = currentPage + 1;
+    }
+    @if (currentPage > 1)
+    {
+        <a href="#" class="page-link" data-page="@previousPage">Previous</a>
+    }
+    <a href="#" class="page-link" data-page="@nextPage">Next</a>
+    @{
+        ViewBag.Title = "Following";
 
 
-    //<section class="row col-md-2" style="display: inline-block;">
-
-    //    <form asp-formethod="post">
-    //        <div class="text-left">
-    //            @for (int i = 0; i < Model.HashTags.Count(); i++)
-    //            {
-    //                <div class="btn-sm btn-info checkbox icheck-turquoise form-check-inline ">
-    //                    @Html.HiddenFor(m => m.HashTags[i].Id)
-    //                    @Html.CheckBoxFor(m => m.HashTags[i].IsSelected, new { style = "margin-left: 10px;"})
-    //                    @Html.LabelFor(m => m.HashTags[i].IsSelected,
-    //            string.Join(" ", Model.HashTags[i].Name.Split('_')),
-    //            new { @class = "pl-0 align-items-center", style = "padding-left: 0!important;" })
-    //                </div>
-    //                <style>
-    //                    input[type=checkbox]:checked {
-    //                        accent-color: black;
-    //                    }
-    //                </style>
-    //            }
-    //        </div>
-    //    </form>
-    //</section>
-    //<section class="image-container" style="display: inline-block; width:80%">
-    //    @foreach (var image in Model.PicturesIds)
-    //    {
-    //        <img class="block" id="@image.PictureUrl" src="~/images/@image.PictureUrl" alt="" style="width:20%; height:auto;" />
-
-    //    }
-    //</section>
-
-    <div class="container">
-        <div class="top-section" style="border: 1px solid black;">
-            <form asp-formethod="post">
+        <div class="container">
+            <div class="top-section" style="border: 1px solid black;">
                 <div class="text-left">
-                    @for (int i = 0; i < Model.HashTags.Count(); i++)
+                    <style>
+                        .form-check {
+                            display: inline-block;
+                            width: 30%;
+                        }
+                    </style>
+                    @foreach (var item in @Model.HashTags)
                     {
-                        <div class="btn-sm btn-info checkbox icheck-turquoise form-check-inline ">
-                            @Html.HiddenFor(m => m.HashTags[i].Id)
-                            @Html.CheckBoxFor(m => m.HashTags[i].IsSelected, new { style = "margin-left: 10px;"})
-                            @Html.LabelFor(m => m.HashTags[i].IsSelected,
-                    string.Join(" ", Model.HashTags[i].Name.Split('_')),
-                    new { @class = "pl-0 align-items-center", style = "padding-left: 0!important;" })
-                        </div>
-                        <style>
-                            input[type=checkbox]:checked {
-                                accent-color: black;
-                            }
-                        </style>
+                        <tr id="row-@item.Id">
+                            <td><input type="checkbox" name="SelectedTags" value="@item.Id" /></td>
+                            <td>@item.Name</td>
+                        </tr>
                     }
+                    <button id="filterButton" type="submit">Submit</button>
+
                 </div>
-            </form>
-        </div>
-        <div class="col-lg-12">
-            <div class="card mb-4">
-                <div class="card-body">
-                    @if (Model.PicturesIds != null && Model.PicturesIds.Count > 0)
-                    {
-                        <div style="display: flex; flex-wrap: wrap;">
-                            @foreach (var picture in Model.PicturesIds)
-                            {
-                                @await Html.PartialAsync("_PictureGalleryPartial", picture)
-                            }
-                        </div>
-                    }
+            </div>
+            <div class="col-lg-12">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        @if (Model.PicturesIds != null && Model.PicturesIds.Count > 0)
+                        {
+                            <div style="display: flex; flex-wrap: wrap;">
+                                @foreach (var picture in Model.PicturesIds)
+                                {
+                                    @await Html.PartialAsync("_PictureGalleryPartial", picture)
+                                }
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    }
+</div>
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#filterButton').click(function (event) {
+                event.preventDefault();
+                // Store the state of the checkboxes
+                var checkboxState = $('input[name="SelectedTags"]').map(function () {
+                    return this.checked;
+                }).get();
+                var selectedTags = $('input[name="SelectedTags"]:checked').map(function () {
+                    return this.value;
+                }).get();
+                $.ajax({
+                    url: '@Url.Action("All", "Following")',
+                    type: 'GET',
+                    data: $.param({ tagsIds: selectedTags }, true),
+                    traditional: true,
+                    success: function (result) {
+                        // Update the page content with the new view
+                        $('#content').html(result);
+                        // Restore the state of the checkboxes
+                        $('input[name="SelectedTags"]').each(function (index) {
+                            this.checked = checkboxState[index];
+                        });
+                        // Update the URL to reflect the current page number
+                        var newUrl = '@Url.Action("All", "Following")' + '?page=' + page;
+                        history.pushState(null, null, newUrl);
+                    },
+                    error: function (xhr, status, error) {
+                        // handle error
+                    }
+                });
+            });
+
+            $('.page-link').click(function (event) {
+                event.preventDefault();
+                var page = $(this).data('page');
+                // Store the state of the checkboxes
+                var checkboxState = $('input[name="SelectedTags"]').map(function () {
+                    return this.checked;
+                }).get();
+                var selectedTags = $('input[name="SelectedTags"]:checked').map(function () {
+                    return this.value;
+                }).get();
+                $.ajax({
+                    url: '@Url.Action("All", "Following")',
+                    type: 'GET',
+                    data: $.param({ page: page, tagsIds: selectedTags }, true),
+                    traditional: true,
+                    success: function (result) {
+                        // Update the page content with the new view
+                        $('#content').html(result);
+                        // Restore the state of the checkboxes
+                        $('input[name="SelectedTags"]').each(function (index) {
+                            this.checked = checkboxState[index];
+                        });
+                        // Update the URL to reflect the current page number
+                        var newUrl = '@Url.Action("All", "Following")' + '?page=' + page;
+                        history.pushState(null, null, newUrl);
+                    },
+                    error: function (xhr, status, error) {
+                        // handle error
+                    }
+                });
+            });
+        });
+
+    </script>
 }
+
+
