--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/PictureDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/PictureDetails.cshtml
@@ -53,8 +53,8 @@
                                     }
                                     else
                                     {
-                                        <img src="~/images/default-user.png" alt="image"
-                                             class="rounded-circle img-fluid" style="width: 100px;">
+                                        <img src="~/local/no-profile-picture.jpg" alt="image"
+                                             class="img-fluid" style="width: 100px;">
                                     }
                                 </div>
                                 <h4 class="mb-2">@Model.Owner</h4>
@@ -126,6 +126,26 @@
                     </div>
                 </div>
             </section>
+            @if (Model.HashTags != null && Model.HashTags.Count > 0)
+            {
+                <section class="py-3">
+                    <div class="d-flex justify-content-center text-center mt-3 mb-2">
+                        <div class="d-flex justify-content-center rounded-3 p-2 mb-2 flex-wrap w-100"
+                             style="background:radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%); border: 1px solid white; color:white;">
+                            @foreach (var tag in Model.HashTags)
+                            {
+                                <div class="d-flex justify-content-center text-center mt-3 mb-2">
+                                    <div class="d-flex justify-content-center rounded-3 p-2 mb-2" style="margin-right:5px; border: 1px solid white; color:white;">
+                                        <p class="small text-white mb-1">@tag.Name</p>
+                                    </div>
+                                </div>
+                            }
+
+                        </div>
+                    </div>
+                </section>
+            }
+
 
         </div>
     </div>
