--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                             </li>
 
                             <li class="nav-item" style="font-size: 1.3rem">
-                                <a class="nav-link active" asp-area="" asp-controller="" asp-action="">
+                                <a class="nav-link active" asp-area="" asp-controller="Blog" asp-action="GetBlogs">
                                     Blogs
                                     <span class="visually-hidden">(current)</span>
                                 </a>
@@ -72,8 +72,8 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">User Profile</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" asp-area="" asp-controller="UserProfile" asp-action="Profile" asp-route-username="@User.Identity.Name">Profile</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="UserProfile" asp-action="Profile" asp-route-username="@User!.Identity!.Name">Profile</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Blog" asp-action="CreateBlog">New Blog Post</a>
                                         <a class="dropdown-item" href="#">Something else here</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="#">Separated link</a>
@@ -85,6 +85,10 @@
                                 </li>
 
                             </ul>
+                        }
+                        else
+                        {
+                            <partial name="_LoginPartial" />
                         }
                     </div>
                 </div>
