--- a/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using ArtfulAdventures.Web.ViewModels.Home
 @using ArtfulAdventures.Web.ViewModels.Picture
 @using ArtfulAdventures.Web.ViewModels.UserProfile
+@using ArtfulAdventures.Web.ViewModels.Blog
+@using static ArtfulAdventures.Common.DataModelsValidationConstants.BlogConstants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
