--- a/Artful-Adventures/ArtfulAdventures.Web/wwwroot/css/site.css
+++ b/Artful-Adventures/ArtfulAdventures.Web/wwwroot/css/site.css
@@ -13,10 +13,10 @@ html {
 	min-height: 100%;
 	box-sizing: border-box;
 }
-
+/*
 body {
-	background: radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%);
-}
+	background: radial-gradient(circle at -4% -12.9%, #3C4F6C 0.3%, #1A233A 90.2%);
+}*/
 
 .navbar {
 	background: linear-gradient(to top, rgb(9, 32, 63) 0%, rgb(83, 120, 149) 100%);
@@ -57,5 +57,63 @@ ul.nav-item.mt-3 {
 .sticky-footer {
 	position: absolute; /* for it to disappear under last body element */
 	bottom: 0; /* so the footer can stick to the bottom*/
+}
+
+body {
+	color: #bcd0f7;
+	background: #1A233A;
+}
+
+.account-settings .user-profile {
+	margin: 0 0 1rem 0;
+	padding-bottom: 1rem;
+	text-align: center;
+}
+
+	.account-settings .user-profile .user-avatar {
+		margin: 0 0 1rem 0;
+	}
+
+		.account-settings .user-profile .user-avatar img {
+			width: 90px;
+			height: 90px;
+			-webkit-border-radius: 100px;
+			-moz-border-radius: 100px;
+			border-radius: 100px;
+		}
+
+	.account-settings .user-profile h5.user-name {
+		margin: 0 0 0.5rem 0;
+	}
+
+	.account-settings .user-profile h6.user-email {
+		margin: 0;
+		font-size: 0.8rem;
+		font-weight: 400;
+	}
+
+.account-settings .about {
+	margin: 1rem 0 0 0;
+	font-size: 0.8rem;
+	text-align: center;
+}
+
+.card {
+	background: #272E48;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 0;
+	margin-bottom: 1rem;
+}
+
+.form-control {
+	border: 1px solid #596280;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	font-size: .825rem;
+	background: #1A233A;
+	color: #bcd0f7;
 }
 
